fix external link table on mobile

--- a/assets/src/scss/3-global/_externallinks.scss
+++ b/assets/src/scss/3-global/_externallinks.scss
@@ -42,10 +42,15 @@
 }
 
 .style_external_links {
-  .table {
-    @media (max-width: 767px)  {
+  @media (max-width: 767px)  {
+    .table {
       display: block;
       overflow-x: auto;
+    }
+
+    tbody {
+      display: table;
+      width: 100%;
     }
   }
 }
